fix for footer spacing

--- a/scss/post.scss
+++ b/scss/post.scss
@@ -337,6 +337,11 @@ footer#page-footer {
     padding-bottom: 0.5em;
   }
 
+  div p {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
 }
 
 body {
